--- a/LAB_1/test_diamond/scf.tmpl
+++ b/LAB_1/test_diamond/scf.tmpl
@@ -3,7 +3,7 @@
     prefix='@prefix@',
     calculation = 'scf'
     restart_mode='from_scratch',
-    pseudo_dir = './pseudo/'
+    pseudo_dir = '/home/max/LabQSM/pseudo/'
     outdir = './SCRATCH'
  /
  &SYSTEM
